refactored analysis, major overhaul

--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -47,20 +47,17 @@
    "outputs": [],
    "source": [
     "# %load women_imports.py\n",
-    "from pathlib import Path\n",
+    "from women_analysis import (\n",
+    "    convert_cat_to_numeric,\n",
+    "    create_anc_4_visits,\n",
+    "    create_anc_3_components,\n",
+    "    create_inst_delivery,\n",
+    "    create_caesarean_del,\n",
+    "    create_pnc_mother,\n",
+    "    create_low_bw,\n",
+    ")\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import json\n",
-    "import pyreadstat\n",
-    "\n",
-    "from women_analysis import create_anc_4_visits, create_anc_3_components\n",
-    "\n",
-    "from aw_analytics import mean_wt, output_mean_table\n",
-    "\n",
-    "pd.set_option(\"display.max_rows\", 1500)\n",
-    "pd.set_option(\"display.max_columns\", None)\n"
+    "from aw_analytics import mean_wt, output_mean_table\n"
    ]
   },
   {
@@ -75,7 +72,7 @@
     "\n",
     "# -------------------------------------------------------------------\n",
     "year = '2021'\n",
-    "# -------------------------------------------------------------------\n"
+    "# -------------------------------------------------------------------"
    ]
   },
   {
@@ -155,29 +152,73 @@
    "outputs": [],
    "source": [
     "# --- ANC components [anc_3_components] --- #\n",
-    "\n",
     "create_anc_3_components(df, country, year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Institutional [inst_delivery] --- #\n",
-    "\n",
-    "## Create categories\n",
-    "inst_delivery_options = ['PUBLIC HOSPITAL', 'PRIVATE HOSPITAL', 'COMMUNE HEALTH CENTRE',\n",
-    " 'LOCAL CLINIC', 'HOSPITAL OF A MINISTRY OR A SECTOR', 'OTHER PRIVATE MEDICAL']\n",
-    "\n",
-    "# Create indicator\n",
-    "df['inst_delivery'] = np.where(df['MN20'].isin(inst_delivery_options), 100, 0)"
+    "create_inst_delivery(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Caesarean Delivery [caesarean_del] --- #\n",
+    "create_caesarean_del(df, country, year)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Post-natal Health Check (mother) [pnc_mother]\n",
+    "create_pnc_mother(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Low birthweight [low_bw] --- #\n",
+    "create_low_bw(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Early Initiation BF [early_bf] --- #\n",
+    "\n",
+    "## Convert categorical column to int\n",
+    "\n",
+    "### Convert DK to 0\n",
+    "df['MN37N'] = np.where(df['MN37N'] == 'IMMEDIATELY', '0.0', df['MN37N'])\n",
+    "df['MN37N'] = np.where(df['MN37N'] == 'DK / DON’T REMEMBER', '99.0', df['MN37N'])\n",
+    "\n",
+    "### Cast value to float \n",
+    "df['MN37N'] = df['MN37N'].astype(float)\n",
+    "\n",
+    "# Create indicator\n",
+    "df['early_bf'] = np.where(df['MN37N'] < 1, 100, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +242,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>anc_3_components</th>\n",
+       "      <th>low_bw</th>\n",
        "      <th>Weighted_Count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -213,12 +254,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RURAL</th>\n",
-       "      <td>68.8</td>\n",
+       "      <td>4.3</td>\n",
        "      <td>987.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>URBAN</th>\n",
-       "      <td>85.6</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>449.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -226,122 +267,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       anc_3_components  Weighted_Count\n",
-       "HH6                                    \n",
-       "RURAL              68.8           987.2\n",
-       "URBAN              85.6           449.2"
+       "       low_bw  Weighted_Count\n",
+       "HH6                          \n",
+       "RURAL     4.3           987.2\n",
+       "URBAN     2.8           449.2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "var = 'anc_3_components'\n",
+    "var = 'low_bw'\n",
     "ind_vars = ['HH6']\n",
     "wt = 'wmweight'\n",
-    "\n",
-    "output_mean_table(df, var, ind_vars, wt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Caesarean Delivery [caesarean_del] --- #\n",
-    "\n",
-    "# Create indicator\n",
-    "df['caesarean_del'] = np.where(df['MN21'] == 'YES', 100, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Post-natal Health Check (mother) [pnc_mother] --- #\n",
-    "\n",
-    "## Health check by health provider after birth & a) before leaving facility (PN5) or b) before health provider left home (PN9)\n",
-    "\n",
-    "## Create sub-indicator\n",
-    "df['health_check_after_birth'] = np.where(((df['PN5'] == 'YES') | (df['PN9'] == 'YES')), 100, 0)\n",
-    "\n",
-    "## Seprate PNC visit by health provider (PN22U and PN22N)\n",
-    "\n",
-    "## Post-natal care visit within 2 days ##\n",
-    "\n",
-    "### Convert PN22N to float\n",
-    "df['PN21N'] = np.where(df['PN22N'] == 'DK', '99.0', df['PN22N'])\n",
-    "df['PN22N'] = df['PN22N'].astype(float)\n",
-    "\n",
-    "## Create sub-indicator\n",
-    "df['pnc_2_days'] = np.where((df['PN22U'] == 'Hours') | ((df['PN22U'] == 'Days') & (df['PN22N'] <= 2)), 100, 0)\n",
-    "\n",
-    "### Set value pnc_2_days to 0 IF check was not done by health provider\n",
-    "df['pnc_health_provider'] = np.where((df['PN23A'] == 'DOCTOR') | (df['PN23B'] == 'NURSE / MIDWIFE') |\\\n",
-    "     (df['PN23F'] == 'TRADITIONAL BIRTH ATTENDANT') | (df['PN23G'] == 'COMMUNITY HEALTH WORKER'), 100, 0)\n",
-    "\n",
-    "df['pnc_2_days'] = np.where((df['pnc_health_provider'] == 100), df['pnc_2_days'], 0)\n",
-    "\n",
-    "# Create indicator\n",
-    "df['pnc_mother'] = np.where((df['health_check_after_birth'] == 100) | (df['pnc_2_days'] == 100), 100, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Low birthweight [low_bw] --- #\n",
-    "\n",
-    "## Convert categorical column to int\n",
-    "\n",
-    "### Convert DK and NaN to 99\n",
-    "df['MN34'] = np.where(df['MN34'] == 'DK', 'NaN', df['MN34'])\n",
-    "\n",
-    "### Cast value to float \n",
-    "df['MN34'] = df['MN34'].astype(float)\n",
-    "\n",
-    "# Create indicator\n",
-    "df['low_bw'] = np.where(df['MN34'] < 2.5, 100, 0)\n",
-    "df['low_bw'] = np.where(df['MN34'].isnull(), np.nan, df['low_bw'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Early Initiation BF [early_bf] --- #\n",
-    "## Convert categorical column to int\n",
-    "\n",
-    "### Convert DK to 0\n",
-    "df['MN37N'] = np.where(df['MN37N'] == 'IMMEDIATELY', '0.0', df['MN37N'])\n",
-    "df['MN37N'] = np.where(df['MN37N'] == 'DK / DON’T REMEMBER', '99.0', df['MN37N'])\n",
-    "\n",
-    "### Cast value to float \n",
-    "df['MN37N'] = df['MN37N'].astype(float)\n",
-    "\n",
-    "# Create indicator\n",
-    "df['early_bf'] = np.where(df['MN37N'] < 1, 100, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Weighted mean\n",
-    "wt = ['wmweight']\n",
-    "var = 'early_bf'\n",
-    "ind_vars = ['HH7']\n",
     "\n",
     "output_mean_table(df, var, ind_vars, wt)"
    ]
