--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "# %load women_imports.py\n",
     "from women_analysis import (\n",
-    "    convert_cat_to_numeric,\n",
+    "    convert_str_to_num,\n",
     "    create_anc_4_visits,\n",
     "    create_anc_3_components,\n",
     "    create_inst_delivery,\n",
@@ -139,7 +139,28 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var_convert is: dict_keys(['anc_4_visits', 'anc_3_components', 'inst_delivery', 'caesarean_del', 'pnc_mother', 'low_bw', 'early_bf'])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'dict_keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\VNM_WM_preprocess.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Lindsey/OneDrive%20-%20A3DI/Alive%20%26%20Thrive/2_Country_I/VNM_WM_preprocess.ipynb#ch0000007?line=0'>1</a>\u001b[0m \u001b[39m# --- ANC 4+ visits [anc_4_visits] --- #\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Lindsey/OneDrive%20-%20A3DI/Alive%20%26%20Thrive/2_Country_I/VNM_WM_preprocess.ipynb#ch0000007?line=1'>2</a>\u001b[0m create_anc_4_visits(df, country, year)\n",
+      "File \u001b[1;32mc:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:38\u001b[0m, in \u001b[0;36mcreate_anc_4_visits\u001b[1;34m(df, country, year)\u001b[0m\n\u001b[0;32m     34\u001b[0m var_convert \u001b[39m=\u001b[39m config_data[country][year]\u001b[39m.\u001b[39mkeys()\n\u001b[0;32m     36\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mvar_convert is: \u001b[39m\u001b[39m{\u001b[39;00mvar_convert\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 38\u001b[0m df \u001b[39m=\u001b[39m convert_str_to_num(df, country, year, var_convert, var_anc_4)\n\u001b[0;32m     40\u001b[0m \u001b[39m## Cast categorical column to float\u001b[39;00m\n\u001b[0;32m     41\u001b[0m df[var_anc_4] \u001b[39m=\u001b[39m df[var_anc_4]\u001b[39m.\u001b[39mastype(\u001b[39mfloat\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Lindsey\\OneDrive - A3DI\\Alive & Thrive\\2_Country_I\\women_analysis.py:20\u001b[0m, in \u001b[0;36mconvert_str_to_num\u001b[1;34m(df, country, year, var_convert, cat_var)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[39mHelper function to convert string variable (in categorical) to numeric\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[39m# :: VALUES\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m str_replace_dict \u001b[39m=\u001b[39m config_data[country][year][var_convert][\u001b[39m\"\u001b[39m\u001b[39mconvert_values\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     21\u001b[0m df[cat_var] \u001b[39m=\u001b[39m df[cat_var]\u001b[39m.\u001b[39mreplace(str_replace_dict)\n\u001b[0;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m df\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'dict_keys'"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "create_anc_4_visits(df, country, year)"
@@ -147,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.MN37N.value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,68 +248,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>low_bw</th>\n",
-       "      <th>Weighted_Count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HH6</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>RURAL</th>\n",
-       "      <td>4.3</td>\n",
-       "      <td>987.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>URBAN</th>\n",
-       "      <td>2.8</td>\n",
-       "      <td>449.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       low_bw  Weighted_Count\n",
-       "HH6                          \n",
-       "RURAL     4.3           987.2\n",
-       "URBAN     2.8           449.2"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "var = 'low_bw'\n",
+    "var = 'anc_4_visits'\n",
     "ind_vars = ['HH6']\n",
     "wt = 'wmweight'\n",
     "\n",
