--- a/VNM_HL_extract.ipynb
+++ b/VNM_HL_extract.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +28,12 @@
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
     "    merge_hh_hl_data,\n",
-    "    subset_df,\n",
+    "    subset_hl_df,\n",
     "    standardize_col_names,\n",
     "    standardize_col_values,\n",
     "    create_elderly_hoh,\n",
     "    save_merge,\n",
+    "    export_analyzed_data\n",
     ")\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 1500)\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,46 +54,60 @@
     "var_replace = ['sex_hoh']\n",
     "\n",
     "# -------------------------------------------------------------------\n",
-    "year = '2006'\n",
+    "year_list = ['2000', '2006', '2011', '2014', '2021']\n",
     "# -------------------------------------------------------------------\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file -- hl_2000.sav -- has the following shape: Rows: 35657; Columns: 99\n",
+      "HHID is NOT unique\n",
+      "The merge variable *HHID* is unique: True\n",
       "The file -- hl_2006.sav -- has the following shape: Rows: 36573; Columns: 154\n",
+      "HHID is NOT unique\n",
+      "The merge variable *HHID* is unique: True\n",
+      "The file -- hl_2011.sav -- has the following shape: Rows: 44831; Columns: 64\n",
+      "HHID is NOT unique\n",
+      "The merge variable *HHID* is unique: True\n",
+      "The file -- hl_2014.sav -- has the following shape: Rows: 39380; Columns: 50\n",
+      "HHID is NOT unique\n",
+      "The merge variable *HHID* is unique: True\n",
+      "The file -- hl_2021.sav -- has the following shape: Rows: 47821; Columns: 73\n",
       "HHID is NOT unique\n",
       "The merge variable *HHID* is unique: True\n"
      ]
     }
    ],
    "source": [
-    "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "for year in year_list:\n",
     "\n",
-    "# Create HHID to facilitate merge of HH and HL data\n",
-    "generate_HHID(df, country, year, recode)\n",
+    "    # Read file\n",
+    "    df = read_file(country, year, recode)\n",
     "\n",
-    "# Subset df\n",
-    "df = subset_df(df, country, year, recode, var_subset)\n",
+    "    # Create HHID to facilitate merge of HH and HL data\n",
+    "    generate_HHID(df, country, year, recode)\n",
     "\n",
-    "# Standardize column names\n",
-    "df = standardize_col_names(df, country, year, recode, var_rename)\n",
+    "    # Subset df\n",
+    "    df = subset_hl_df(df, country, year, recode, var_subset)\n",
     "\n",
-    "# Standardize column values\n",
-    "df = standardize_col_values(df, country, year, recode, var_replace)\n",
+    "    # Standardize column names\n",
+    "    df = standardize_col_names(df, country, year, recode, var_rename)\n",
     "\n",
-    "# Create Elderly HoH\n",
-    "df = create_elderly_hoh(df, var_rename[0])\n",
+    "    # Standardize column values\n",
+    "    df = standardize_col_values(df, country, year, recode, var_replace)\n",
     "\n",
-    "# Save to merge folder\n",
-    "save_merge(df, country, year, recode)"
+    "    # Create Elderly HoH\n",
+    "    df = create_elderly_hoh(df, var_rename[0])\n",
+    "\n",
+    "    # Save to merge folder\n",
+    "    save_merge(df, country, year, recode)"
    ]
   },
   {
