--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
     "    merge_hh_hl_data,\n",
-    "    subset_df,\n",
+    "    subset_hl_df,\n",
     "    standardize_col_names,\n",
     "    standardize_col_values,\n",
     "    create_elderly_hoh,\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "    create_pnc_mother,\n",
     "    create_low_bw,\n",
     "    create_early_bf,\n",
+    "    create_low_bw,\n",
     "    create_mother_edu,\n",
     "    subset_women_file\n",
     ")\n",
@@ -147,8 +148,8 @@
     "# Post-natal Health Check (mother) [pnc_mother]\n",
     "df = create_pnc_mother(df, country, year)\n",
     "\n",
-    "# # --- Low birthweight [low_bw] --- #\n",
-    "# df = create_low_bw(df, country, year)\n",
+    "# --- Low birthweight [low_bw] --- #\n",
+    "df = create_low_bw(df, country, year)\n",
     "\n",
     "# --- Early Initiation BF [early_bf] --- #\n",
     "df = create_early_bf(df, country, year)"
@@ -245,8 +246,8 @@
     "# Post-natal Health Check (mother) [pnc_mother]\n",
     "df = create_pnc_mother(df, country, year)\n",
     "\n",
-    "# # --- Low birthweight [low_bw] --- #\n",
-    "# df = create_low_bw(df, country, year)\n",
+    "# --- Low birthweight [low_bw] --- #\n",
+    "df = create_low_bw(df, country, year)\n",
     "\n",
     "# --- Early Initiation BF [early_bf] --- #\n",
     "df = create_early_bf(df, country, year)"
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,9 +293,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2011.sav -- has the following shape: Rows: 12115; Columns: 235\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 12115; Columns: 238\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1363\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_file(country, year, recode)\n",
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,9 +346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "agg_value_prop_dict is: \n",
+      " {'Average': 0.019553072625698324, 'Smaller than average': 0.34545454545454546, 'Missing': 0.25, 'Larger than average': 0.0, 'Very small': 0.55, 'Very large': 0.0, 'DK': 0.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -350,8 +374,8 @@
     "# # Post-natal Health Check (mother) [pnc_mother]\n",
     "# df = create_pnc_mother(df, country, year)\n",
     "\n",
-    "# # --- Low birthweight [low_bw] --- #\n",
-    "# df = create_low_bw(df, country, year)\n",
+    "# --- Low birthweight [low_bw] --- #\n",
+    "df = create_low_bw(df, country, year)\n",
     "\n",
     "# --- Early Initiation BF [early_bf] --- #\n",
     "df = create_early_bf(df, country, year)"
@@ -382,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,9 +421,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file -- wm_2006.sav -- has the following shape: Rows: 9471; Columns: 252\n",
+      "HHID is NOT unique\n",
+      "Drop columns if all values are NaN...\n",
+      "Updated -- Rows: 9471; Columns: 255\n",
+      "Checking if any rows are duplicates...\n",
+      "The are no duplicate rows\n",
+      "The number of mothers with a birth in the past two years is: 1023\n"
+     ]
+    }
+   ],
    "source": [
     "# Read file\n",
     "df = read_file(country, year, recode)\n",
@@ -455,11 +493,24 @@
     "# # Post-natal Health Check (mother) [pnc_mother]\n",
     "# df = create_pnc_mother(df, country, year)\n",
     "\n",
-    "# # --- Low birthweight [low_bw] --- #\n",
-    "# df = create_low_bw(df, country, year)\n",
+    "# --- Low birthweight [low_bw] --- #\n",
+    "df = create_low_bw(df, country, year)\n",
     "\n",
     "# --- Early Initiation BF [early_bf] --- #\n",
     "df = create_early_bf(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = 'low_bw'\n",
+    "ind_vars = ['HH6']\n",
+    "wt = 'wmweight'\n",
+    "\n",
+    "output_mean_table(df, var, ind_vars, wt)"
    ]
   },
   {
@@ -505,7 +556,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read file\n",
+    "df = read_file(country, year, recode)\n",
+    "\n",
+    "# Create HHID to facilitate merge of HH and HL data\n",
+    "generate_HHID(df, country, year, recode)\n",
+    "\n",
+    "# Run quality assurance\n",
+    "run_quality_assurance(df)\n",
+    "\n",
+    "# Merge in HH and HL data\n",
+    "df = merge_hh_hl_data(df, country, year)\n",
+    "\n",
+    "# Subset women file\n",
+    "df = subset_women_file(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Indicators"
+   ]
   },
   {
    "cell_type": "code",
@@ -513,9 +586,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var = 'early_bf'\n",
+    "# --- Create Mother edu [mother_edu] --- #\n",
+    "df = create_mother_edu(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.mother_edu.value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
+    "# df = create_anc_4_visits(df, country, year)\n",
+    "\n",
+    "# # --- ANC components [anc_3_components] --- #\n",
+    "# df = create_anc_3_components(df, country, year)\n",
+    "\n",
+    "# # --- Institutional [inst_delivery] --- #\n",
+    "# df = create_inst_delivery(df, country, year)\n",
+    "\n",
+    "# # --- Caesarean Delivery [caesarean_del] --- #\n",
+    "# df = create_caesarean_del(df, country, year)\n",
+    "\n",
+    "# # Post-natal Health Check (mother) [pnc_mother]\n",
+    "# df = create_pnc_mother(df, country, year)\n",
+    "\n",
+    "# # --- Low birthweight [low_bw] --- #\n",
+    "# df = create_low_bw(df, country, year)\n",
+    "\n",
+    "# # --- Early Initiation BF [early_bf] --- #\n",
+    "# df = create_early_bf(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = 'low_bw'\n",
     "ind_vars = ['hh6']\n",
-    "wt = 'wmweight'\n",
+    "wt = 'WMWEIGHT'\n",
     "\n",
     "output_mean_table(df, var, ind_vars, wt)"
    ]
