added tabulation files

--- a/VNM_WM_preprocess.ipynb
+++ b/VNM_WM_preprocess.ipynb
@@ -26,7 +26,7 @@
     "import pyreadstat\n",
     "\n",
     "from std_utils import (\n",
-    "    read_file,\n",
+    "    read_spss_file,\n",
     "    run_quality_assurance,\n",
     "    generate_HHID,\n",
     "    merge_hh_hl_data,\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,26 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- wm_2011.sav -- has the following shape: Rows: 12115; Columns: 235\n",
-      "HHID is NOT unique\n",
-      "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 12115; Columns: 238\n",
-      "Checking if any rows are duplicates...\n",
-      "The are no duplicate rows\n",
-      "The number of mothers with a birth in the past two years is: 1363\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
@@ -336,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,18 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "agg_value_prop_dict is: \n",
-      " {'Average': 0.019553072625698324, 'Smaller than average': 0.34545454545454546, 'Missing': 0.25, 'Larger than average': 0.0, 'Very small': 0.55, 'Very large': 0.0, 'DK': 0.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- ANC 4+ visits [anc_4_visits] --- #\n",
     "df = create_anc_4_visits(df, country, year)\n",
@@ -406,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,26 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file -- wm_2006.sav -- has the following shape: Rows: 9471; Columns: 252\n",
-      "HHID is NOT unique\n",
-      "Drop columns if all values are NaN...\n",
-      "Updated -- Rows: 9471; Columns: 255\n",
-      "Checking if any rows are duplicates...\n",
-      "The are no duplicate rows\n",
-      "The number of mothers with a birth in the past two years is: 1023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
@@ -501,19 +464,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var = 'low_bw'\n",
-    "ind_vars = ['HH6']\n",
-    "wt = 'wmweight'\n",
-    "\n",
-    "output_mean_table(df, var, ind_vars, wt)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -558,7 +508,7 @@
    "outputs": [],
    "source": [
     "# Read file\n",
-    "df = read_file(country, year, recode)\n",
+    "df = read_spss_file(country, year, recode)\n",
     "\n",
     "# Create HHID to facilitate merge of HH and HL data\n",
     "generate_HHID(df, country, year, recode)\n",
@@ -596,15 +546,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.mother_edu.value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# # --- ANC 4+ visits [anc_4_visits] --- #\n",
     "# df = create_anc_4_visits(df, country, year)\n",
     "\n",
@@ -620,11 +561,18 @@
     "# # Post-natal Health Check (mother) [pnc_mother]\n",
     "# df = create_pnc_mother(df, country, year)\n",
     "\n",
-    "# # --- Low birthweight [low_bw] --- #\n",
-    "# df = create_low_bw(df, country, year)\n",
+    "# --- Low birthweight [low_bw] --- #\n",
+    "df = create_low_bw(df, country, year)\n",
     "\n",
     "# # --- Early Initiation BF [early_bf] --- #\n",
     "# df = create_early_bf(df, country, year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export working variables"
    ]
   },
   {
@@ -633,11 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var = 'low_bw'\n",
-    "ind_vars = ['hh6']\n",
-    "wt = 'WMWEIGHT'\n",
-    "\n",
-    "output_mean_table(df, var, ind_vars, wt)"
+    "export_analyzed_data(df, country, year, recode)"
    ]
   },
   {
